# key-value-web-server

./: .editorconfig  .gitattributes  .gitignore  BackgroundWorker.cpp  BackgroundWorker.h  CMakeLists.txt  DataEngine.cpp  DataEngine.h  DataSerializer.cpp  DataSerializer.h  HttpServer.cpp  HttpServer.h  HttpServerHelpers.cpp  HttpServerHelpers.h  KeyValueWebServer.postman_collection.json  LICENSE  Logger.cpp  Logger.h  Makefile  README.md  StatisticsPrinter.cpp  StatisticsPrinter.h  WebServer.postman_collection.json  client.py  database.example.json  main.cpp
.config/: .flake8  .markdownlint.yaml  .yamllint.yaml
.github/workflows/: build_cmake.yml  codeql-analysis.yml  msvc.yml
cmake/Hunter/: config.cmake
dependency/CrowCpp/: CMakeLists.txt  VERSION
dependency/CrowCpp/include/crow/: app.h  http_connection.h  http_request.h  http_response.h  http_server.h  json.h  parser.h  websocket.h
utils/: stdlib.h  stl.h
